crates/cli/tests/snapshots/init_test__init_toolchain__renders_full.snap
---
source: crates/cli/tests/init_test.rs
expression: "fs::read_to_string(config).unwrap()"
---
# https://moonrepo.dev/docs/config/toolchain
$schema: './cache/schemas/toolchain.json'

# extends: './shared/toolchains.yml'

typescript:
  syncProjectReferences: true
  syncProjectReferencesToPaths: false
  includeProjectReferenceSources: false
  includeSharedTypes: false
